<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#573468"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_marginTop="123dp"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        tools:layout_marginStart="170dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:importantForAutofill="no"
        android:drawableStart="@drawable/ic_person_outline_black_24dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:layout_marginRight="30dp"
        tools:layout_marginEnd="30dp"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:importantForAutofill="no"
        android:layout_marginStart="30dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:background="@android:color/holo_red_dark"
        android:textColor="@android:color/white"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="30dp"
        tools:layout_marginRight="30dp"
        android:layout_marginStart="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="123dp"
            android:layout_marginLeft="123dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:text="@string/don_t_have_an_account"
            android:textColor="#aaaaaa"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>